fix scrollbar thing

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,6 +2,9 @@
 html{
   overflow-y:hidden;
 }
+body{
+  overflow-y:hidden;
+}
 .user-profile{
 
   margin-left: -10px;
